# libhdate-old

./: README.md
libhdate/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  USE  configure.in
libhdate/bindings/python/: Makefile.am  setup.py
libhdate/docs/man/man1/: hcal.1  hdate.1
libhdate/docs/man/man3/: hdate.h.3  hdate_struct.3
libhdate/examples/hcal/: Makefile.am  hcal.c  hdate.c
libhdate/po/: POTFILES.in  es_MX.po  fr.po  he.po  libhdate.pot  ru.po  sv.po
libhdate/src/: Makefile.am  hdate.h  hdate_holyday.c  hdate_strings.c  hdatepp.h  support.h
